# BigQuery-Agent-Analytics-SDK

./: .gitignore  CHANGELOG.md  README.md  SDK.md  pyproject.toml
.claude-plugin/: marketplace.json
dashboard/: app.py
dashboard_v2/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
docs/: README.md  bigquery_sampler_eval_bridge_design.md  codex_otlp_ingest_design.md  design.md  entity_resolution_primitives.md  extractor_compilation_bka_measurement.md  extractor_compilation_bq_bundle_mirror.md  extractor_compilation_bundle_loader.md  extractor_compilation_diagnostics.md  extractor_compilation_orchestrator_swap.md  extractor_compilation_plan_resolver.md  extractor_compilation_retry_loop.md  extractor_compilation_revalidate_cli.md  extractor_compilation_revalidation.md  extractor_compilation_rollout_guide.md  extractor_compilation_runtime_fallback.md  extractor_compilation_runtime_registry.md  extractor_compilation_runtime_target.md  extractor_compilation_scaffolding.md  extractor_compilation_template_renderer.md  hatteras_evaluation.md  implementation_plan_concept_index_runtime.md  implementation_plan_remote_function.md  ontology_runtime_reader.md  otlp_receiver_design.md  prd_unified_analytics_interface.md  python_udf_support_design.md
examples/: README.md  context_graph_adcp_demo.ipynb  e2e_demo.py  e2e_notebook_demo.ipynb  migration_v5_demo_notebook.ipynb  nba_agent_trace_analysis_notebook.ipynb  ontology_graph_v4_demo.ipynb
issues/: concurrent_classify_sessions.md
producers/: README.md  RELEASING.md  pyproject.toml
producers/scripts/: build_claude_plugin.py  release_image_tool.py
producers/src/bigquery_agent_analytics_tracing/: __init__.py  _utils.py  _writer_identity.py  config.py  drain.py  schema.py  setup_check.py
producers/src/bigquery_agent_analytics_tracing/otlp/: __init__.py  _release.py  app.py  bootstrap.py  cli.py  config_artifacts.py  consumer.py  ddl.py  decode.py  envelope.py  preflight.py  projection.py  receiver.py  schema.py  sql.py  teardown.py  verify.py  writer.py
producers/tests/: test_bootstrap_release_image.py  test_build_claude_plugin.py  test_claude_code.py  test_config.py  test_drain.py  test_logger_row_shape.py  test_otlp_bootstrap.py  test_otlp_cli.py  test_otlp_config_artifacts.py  test_otlp_ddl.py  test_otlp_decode.py  test_otlp_e2e.py  test_otlp_preflight.py  test_otlp_receiver.py  test_otlp_schema.py  test_otlp_teardown.py  test_otlp_verify.py  test_otlp_writer.py  test_release_image_tool.py  test_schema.py  test_setup_check.py
scripts/: README.md  generate_colab_from_codelab.py  latency_report.py  latency_report.sh  quality_report.py  (+5 more)
(+369 files in other folders)
