# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bigquery-agent-analytics-tracing"
version = "0.1.0.dev0"
description = "Producer packages and Claude/Codex/OpenAI Agents tracing adapters for BigQuery Agent Analytics."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
  {name = "Google LLC"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "google-cloud-bigquery>=3.0.0",
]

[project.optional-dependencies]
storage-write = [
  "google-cloud-bigquery-storage>=2.24.0",
  "pyarrow>=14.0.0",
]
openai-agents = [
  "openai-agents>=0.0.5",
]
claude-sdk = [
  "claude-agent-sdk>=0.1.0",
]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "pyink>=24.3.0",
  "isort>=5.0",
  "tomli>=1.1; python_version < '3.11'",
]

[project.scripts]
bqaa-drain = "bigquery_agent_analytics_tracing.drain:main"
bqaa-claude-hook = "bigquery_agent_analytics_tracing.claude_code:main"
bqaa-check-setup = "bigquery_agent_analytics_tracing.setup_check:main"

[project.urls]
Homepage = "https://github.com/GoogleCloudPlatform/BigQuery-Agent-Analytics-SDK"
Issues = "https://github.com/GoogleCloudPlatform/BigQuery-Agent-Analytics-SDK/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bigquery_agent_analytics_tracing"]

[tool.pyink]
line-length = 80
pyink-indentation = 2
pyink-use-majority-quotes = true

[tool.isort]
profile = "google"
line_length = 200
indent = 2
multi_line_output = 4
force_sort_within_sections = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
